[package]
name = "pms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipe = "0.4.0"

[dev-dependencies]
fork = "0.1.22"
nix = {version= "0.29.0", features = ["process"]}
rand = "0.8.5"
serial_test = "3.1.1"